# ticket-system

./: EMAIL_SCHEDULER_SETUP.md  EXPORT_README.md  IMPROVEMENTS_GUIDE.md  MIGRATION_GUIDE.md  README.md  app.py  daily_new_orders_report.py  daily_reminder.py  daily_sales_report.py  email_scheduler.py  push-changes.bat  push-changes.ps1  pyproject.toml  replit.md  requirements.txt  utils.py  weekly_sales_report.py
.github/workflows/: email-scheduler.yml
pages/: agents.py
