[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "resend>=2.19.0",
    "streamlit>=1.52.2",
    "streamlit-autorefresh>=1.0.1",
]
